0022332: Fix for Visual3d_Layer (linetype, linewidth and transparency)

Changes:
There are following changes in packages:
OpenGl package:
  1) The method that sets the line attributes in layer mode
     call_togl_set_line_attributes has been modified. Now it doesn't depends
     on static flag variables, instead of it method tries to acquire the
     current OpenGl attribute flags.
  2) The layer begin/end methods call_togl_begin_layer2d / call_togl_end_layer2d
     has been modified to keep the OpenGl attribute flags unchanged.
  3) The maximum count of predefined line styles for OpenGl driver has been
     defined as TEL_LS_MAX in InterfaceGraphic.hxx, this value is used during
     the line style list creation in TsmInitAttributes.

InterfaceGraphic package:
  1) The maximum count of default line styles has been defined as TEL_LS_MAX
     in InterfaceGraphic.hxx

ViewerTest package:
  1) DRAW command "vlayerline" has been added to test linewidth, linetype and
     transparency of the Visual3d_Layer class.
     The command draws a line and has the following arguments:
     >> vlayerline x1 y1 x2 y2 [linewidth=0.5] [linetype=0] [transparency=1.0]
     Linewidth in pixels, Transparency in range [0.0-1.0].